[package]
name = "monacoin"
version = "0.25.0"
authors = ["wakiyamap <wakiyamap@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/wakiyamap/rust-monacoin/"
repository = "https://github.com/wakiyamap/rust-monacoin/"
documentation = "https://docs.rs/monacoin/"
description = "General purpose library for using and interoperating with Monacoin and other cryptocurrencies."
keywords = [ "crypto", "monacoin" ]
readme = "README.md"


[lib]
name = "monacoin"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
use-serde = ["serde", "bitcoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bech32 = "0.7.2"
bitcoin_hashes = "0.9.0"
secp256k1 = "0.19.0"

bitcoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", optional = true }

lyra2 = { version = "0.2.3", git = "https://github.com/wakiyamap/lyra2"}
scrypt = { version = "0.2", default-features = false }

[dev-dependencies]
hex = "=0.3.2"
serde_derive = "<1.0.99"
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { version = "0.19.0", features = ["rand-std"] }
# We need to pin ryu (transitive dep from serde_json) to stay compatible with Rust 1.22.0
ryu = "<1.0.5"
